[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Characters/enemyRanged/run/Armature_newAnimation_04.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy/tracker.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Modules/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Modules/health_mod.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Modules/HurtBox.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=4]
resource_name = "float"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "stand_by"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "float"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "stand_by"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachine" id=1]
states/float/node = SubResource( 6 )
states/float/position = Vector2( 381, 106 )
states/stand_by/node = SubResource( 7 )
states/stand_by/position = Vector2( 554, 106 )
transitions = [ "float", "stand_by", SubResource( 8 ), "stand_by", "float", SubResource( 9 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 13.0

[sub_resource type="CircleShape2D" id=10]
radius = 128.0

[sub_resource type="CircleShape2D" id=11]
radius = 17.5

[sub_resource type="CircleShape2D" id=12]
radius = 15.5

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/float = SubResource( 4 )
anims/stand_by = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 1 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 1 )

[node name="Debug" type="Label" parent="."]
margin_left = 14.119
margin_top = -28.258
margin_right = 54.119
margin_bottom = -14.258
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D_tackle" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CS2D_tackle" type="CollisionShape2D" parent="Area2D_tackle"]
shape = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]

[node name="TimerOut" type="Timer" parent="."]

[node name="TimerIn" type="Timer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 11 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 12 )

[node name="health_mod" parent="." instance=ExtResource( 4 )]

[editable path="Hitbox"]
[editable path="HurtBox"]
